// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-webpack-plugin > build > should create valid app 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1"
     >
     <script
       defer="defer"
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._56mx2d10,html._56mx2d10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="wmpgvt0 _1wjhub510 _1wjhub513">
+        <div class="_1s963ek0 _56mx2d8p _56mx2d7l _56mx2dax _56mx2d9t _56mx2d5d _56mx2d69 _56mx2di9 _56mx2d4j _56mx2d4c _1wjhub510 _1wjhub513 _56mx2d33 _56mx2d36">
+          <span class="_1s963ek0 _56mx2d4x _1wjhub50 _1wjhub51 _1wjhub51t _1wjhub5a _53pak74">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin > build > should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1s963ek0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
._1s963ek1 {
  display: block;
}
._1s963ek2 {
  line-height: 1;
}
._1s963ek3 {
  list-style: none;
}
._1s963ek4 {
  quotes: none;
}
._1s963ek4:after,
._1s963ek4:before {
  content: "";
}
._1s963ek5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1s963ek6 {
  -webkit-appearance: none;
  appearance: none;
}
._1s963ek7 {
  background-color: transparent;
}
._1s963ek8 {
  outline: var(--exopzm10) solid transparent;
  transition: outline-color 0.125s ease;
}
._1s963ek8:focus-visible {
  outline-color: var(--exopzmm);
}
._1s963eka {
  color: inherit;
}
._1s963ekb:disabled {
  opacity: 1;
}
._1s963ekb::-ms-expand {
  display: none;
}
._1s963ekd[type="number"] {
  -moz-appearance: textfield;
}
._1s963ekd[type="number"]::-webkit-inner-spin-button,
._1s963ekd[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1s963ekd::-ms-clear {
  display: none;
}
._1s963ekd::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1s963ekg {
  color: inherit;
  text-decoration: none;
}
._56mx2d0 {
  overflow: hidden;
}
._56mx2d1 {
  overflow: scroll;
}
._56mx2d2 {
  overflow: visible;
}
._56mx2d3 {
  overflow: auto;
}
._56mx2d4 {
  -webkit-user-select: none;
  user-select: none;
}
._56mx2d5 {
  outline: var(--exopzm10) solid transparent;
  transition: outline-color 0.125s ease;
}
._56mx2d5:focus-visible {
  outline-color: var(--exopzmm);
}
._56mx2d6 {
  opacity: 0;
}
._56mx2d7 {
  z-index: 0;
}
._56mx2d8 {
  z-index: 1;
}
._56mx2d9 {
  z-index: 2;
}
._56mx2da {
  z-index: 90;
}
._56mx2db {
  z-index: 100;
}
._56mx2dc {
  z-index: 200;
}
._56mx2dd {
  z-index: 290;
}
._56mx2de {
  z-index: 300;
}
._56mx2df {
  z-index: 400;
}
._56mx2dg {
  cursor: default;
}
._56mx2dh {
  cursor: pointer;
}
._56mx2di {
  pointer-events: none;
}
._56mx2dj {
  top: 0;
}
._56mx2dk {
  bottom: 0;
}
._56mx2dl {
  left: 0;
}
._56mx2dm {
  right: 0;
}
._56mx2dn {
  height: 100%;
}
._56mx2do {
  height: var(--exopzm9);
}
._56mx2dp {
  width: 100%;
}
._56mx2dq {
  width: var(--exopzm9);
}
._56mx2dr {
  min-width: 0;
}
._56mx2ds {
  max-width: var(--exopzm11);
}
._56mx2dt {
  max-width: var(--exopzm12);
}
._56mx2du {
  max-width: var(--exopzm13);
}
._56mx2dv {
  max-width: var(--exopzm14);
}
._56mx2dw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._56mx2dx {
  transition: var(--exopzm5h);
}
._56mx2dy {
  transition: var(--exopzm5i);
}
._56mx2dz:active {
  transform: var(--exopzm5j);
}
html._56mx2d10 ._56mx2d12,
html:not(._56mx2d10) ._56mx2d11 {
  background: var(--exopzm1s);
}
html._56mx2d10 ._56mx2d14,
html:not(._56mx2d10) ._56mx2d13 {
  background: var(--exopzm1t);
}
html._56mx2d10 ._56mx2d16,
html:not(._56mx2d10) ._56mx2d15 {
  background: var(--exopzm1u);
}
html._56mx2d10 ._56mx2d18,
html:not(._56mx2d10) ._56mx2d17 {
  background: var(--exopzm1v);
}
html._56mx2d10 ._56mx2d1a,
html:not(._56mx2d10) ._56mx2d19 {
  background: var(--exopzm1w);
}
html._56mx2d10 ._56mx2d1c,
html:not(._56mx2d10) ._56mx2d1b {
  background: var(--exopzm1x);
}
html._56mx2d10 ._56mx2d1e,
html:not(._56mx2d10) ._56mx2d1d {
  background: var(--exopzm1y);
}
html._56mx2d10 ._56mx2d1g,
html:not(._56mx2d10) ._56mx2d1f {
  background: var(--exopzm1z);
}
html._56mx2d10 ._56mx2d1i,
html:not(._56mx2d10) ._56mx2d1h {
  background: var(--exopzm20);
}
html._56mx2d10 ._56mx2d1k,
html:not(._56mx2d10) ._56mx2d1j {
  background: var(--exopzm21);
}
html._56mx2d10 ._56mx2d1m,
html:not(._56mx2d10) ._56mx2d1l {
  background: var(--exopzm22);
}
html._56mx2d10 ._56mx2d1o,
html:not(._56mx2d10) ._56mx2d1n {
  background: var(--exopzm23);
}
html._56mx2d10 ._56mx2d1q,
html:not(._56mx2d10) ._56mx2d1p {
  background: var(--exopzm24);
}
html._56mx2d10 ._56mx2d1s,
html:not(._56mx2d10) ._56mx2d1r {
  background: var(--exopzm25);
}
html._56mx2d10 ._56mx2d1u,
html:not(._56mx2d10) ._56mx2d1t {
  background: var(--exopzm26);
}
html._56mx2d10 ._56mx2d1w,
html:not(._56mx2d10) ._56mx2d1v {
  background: var(--exopzm27);
}
html._56mx2d10 ._56mx2d1y,
html:not(._56mx2d10) ._56mx2d1x {
  background: var(--exopzm28);
}
html._56mx2d10 ._56mx2d20,
html:not(._56mx2d10) ._56mx2d1z {
  background: var(--exopzm29);
}
html._56mx2d10 ._56mx2d22,
html:not(._56mx2d10) ._56mx2d21 {
  background: var(--exopzm2a);
}
html._56mx2d10 ._56mx2d24,
html:not(._56mx2d10) ._56mx2d23 {
  background: var(--exopzm2b);
}
html._56mx2d10 ._56mx2d26,
html:not(._56mx2d10) ._56mx2d25 {
  background: var(--exopzm2c);
}
html._56mx2d10 ._56mx2d28,
html:not(._56mx2d10) ._56mx2d27 {
  background: var(--exopzm2d);
}
html._56mx2d10 ._56mx2d2a,
html:not(._56mx2d10) ._56mx2d29 {
  background: var(--exopzm2e);
}
html._56mx2d10 ._56mx2d2c,
html:not(._56mx2d10) ._56mx2d2b {
  background: var(--exopzm2f);
}
html._56mx2d10 ._56mx2d2e,
html:not(._56mx2d10) ._56mx2d2d {
  background: var(--exopzm2g);
}
html._56mx2d10 ._56mx2d2g,
html:not(._56mx2d10) ._56mx2d2f {
  background: var(--exopzm2h);
}
html._56mx2d10 ._56mx2d2i,
html:not(._56mx2d10) ._56mx2d2h {
  background: var(--exopzm2i);
}
html._56mx2d10 ._56mx2d2k,
html:not(._56mx2d10) ._56mx2d2j {
  background: var(--exopzm2j);
}
html._56mx2d10 ._56mx2d2m,
html:not(._56mx2d10) ._56mx2d2l {
  background: var(--exopzm2k);
}
html._56mx2d10 ._56mx2d2o,
html:not(._56mx2d10) ._56mx2d2n {
  background: var(--exopzm2l);
}
html._56mx2d10 ._56mx2d2q,
html:not(._56mx2d10) ._56mx2d2p {
  background: var(--exopzm2m);
}
html._56mx2d10 ._56mx2d2s,
html:not(._56mx2d10) ._56mx2d2r {
  background: var(--exopzm2n);
}
html._56mx2d10 ._56mx2d2u,
html:not(._56mx2d10) ._56mx2d2t {
  background: var(--exopzm2o);
}
html._56mx2d10 ._56mx2d2w,
html:not(._56mx2d10) ._56mx2d2v {
  background: var(--exopzm2p);
}
html._56mx2d10 ._56mx2d2y,
html:not(._56mx2d10) ._56mx2d2x {
  background: var(--exopzm2q);
}
html._56mx2d10 ._56mx2d30,
html:not(._56mx2d10) ._56mx2d2z {
  background: var(--exopzm2r);
}
html._56mx2d10 ._56mx2d32,
html:not(._56mx2d10) ._56mx2d31 {
  background: var(--exopzm2s);
}
html._56mx2d10 ._56mx2d34,
html:not(._56mx2d10) ._56mx2d33 {
  background: var(--exopzm2t);
}
html._56mx2d10 ._56mx2d36,
html:not(._56mx2d10) ._56mx2d35 {
  background: var(--exopzm2u);
}
html._56mx2d10 ._56mx2d38,
html:not(._56mx2d10) ._56mx2d37 {
  box-shadow: var(--exopzm5k);
}
html._56mx2d10 ._56mx2d3a,
html:not(._56mx2d10) ._56mx2d39 {
  box-shadow: var(--exopzm5l);
}
html._56mx2d10 ._56mx2d3c,
html:not(._56mx2d10) ._56mx2d3b {
  box-shadow: var(--exopzm5m);
}
html._56mx2d10 ._56mx2d3e,
html:not(._56mx2d10) ._56mx2d3d {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmf);
}
html._56mx2d10 ._56mx2d3g,
html:not(._56mx2d10) ._56mx2d3f {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmg);
}
html._56mx2d10 ._56mx2d3i,
html:not(._56mx2d10) ._56mx2d3h {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmf);
}
html._56mx2d10 ._56mx2d3k,
html:not(._56mx2d10) ._56mx2d3j {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmg);
}
html._56mx2d10 ._56mx2d3m,
html:not(._56mx2d10) ._56mx2d3l {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmh);
}
html._56mx2d10 ._56mx2d3o,
html:not(._56mx2d10) ._56mx2d3n {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmi);
}
html._56mx2d10 ._56mx2d3q,
html:not(._56mx2d10) ._56mx2d3p {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmj);
}
html._56mx2d10 ._56mx2d3s,
html:not(._56mx2d10) ._56mx2d3r {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmj);
}
html._56mx2d10 ._56mx2d3u,
html:not(._56mx2d10) ._56mx2d3t {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmk);
}
html._56mx2d10 ._56mx2d3w,
html:not(._56mx2d10) ._56mx2d3v {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmk);
}
html._56mx2d10 ._56mx2d3y,
html:not(._56mx2d10) ._56mx2d3x {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzml);
}
html._56mx2d10 ._56mx2d40,
html:not(._56mx2d10) ._56mx2d3z {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmn);
}
html._56mx2d10 ._56mx2d42,
html:not(._56mx2d10) ._56mx2d41 {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmn);
}
html._56mx2d10 ._56mx2d44,
html:not(._56mx2d10) ._56mx2d43 {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmo);
}
html._56mx2d10 ._56mx2d46,
html:not(._56mx2d10) ._56mx2d45 {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmo);
}
html._56mx2d10 ._56mx2d48,
html:not(._56mx2d10) ._56mx2d47 {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmp);
}
html._56mx2d10 ._56mx2d4a,
html:not(._56mx2d10) ._56mx2d49 {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmq);
}
html._56mx2d10 ._56mx2d4c,
html:not(._56mx2d10) ._56mx2d4b {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmr);
}
html._56mx2d10 ._56mx2d4e,
html:not(._56mx2d10) ._56mx2d4d {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzmr);
}
html._56mx2d10 ._56mx2d4g,
html:not(._56mx2d10) ._56mx2d4f {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzms);
}
html._56mx2d10 ._56mx2d4i,
html:not(._56mx2d10) ._56mx2d4h {
  box-shadow: inset 0 0 0 var(--exopzmz) var(--exopzms);
}
html._56mx2d10 ._56mx2d4k,
html:not(._56mx2d10) ._56mx2d4j {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmt);
}
html._56mx2d10 ._56mx2d4m,
html:not(._56mx2d10) ._56mx2d4l {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmu);
}
html._56mx2d10 ._56mx2d4o,
html:not(._56mx2d10) ._56mx2d4n {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmv);
}
html._56mx2d10 ._56mx2d4q,
html:not(._56mx2d10) ._56mx2d4p {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmw);
}
html._56mx2d10 ._56mx2d4s,
html:not(._56mx2d10) ._56mx2d4r {
  box-shadow: inset 0 0 0 var(--exopzmy) var(--exopzmx);
}
._56mx2d4t {
  display: none;
}
._56mx2d4x {
  display: block;
}
._56mx2d51 {
  display: inline;
}
._56mx2d55 {
  display: inline-block;
}
._56mx2d59 {
  display: flex;
}
._56mx2d5d {
  position: relative;
}
._56mx2d5h {
  position: absolute;
}
._56mx2d5l {
  position: fixed;
}
._56mx2d5p {
  position: sticky;
}
._56mx2d5t {
  border-radius: 0;
}
._56mx2d5x {
  border-radius: 9999px;
}
._56mx2d61 {
  border-radius: var(--exopzmb);
}
._56mx2d65 {
  border-radius: var(--exopzmc);
}
._56mx2d69 {
  border-radius: var(--exopzmd);
}
._56mx2d6d {
  border-radius: var(--exopzme);
}
._56mx2d6h {
  gap: var(--exopzm0);
}
._56mx2d6l {
  gap: var(--exopzm1);
}
._56mx2d6p {
  gap: var(--exopzm2);
}
._56mx2d6t {
  gap: var(--exopzm3);
}
._56mx2d6x {
  gap: var(--exopzm4);
}
._56mx2d71 {
  gap: var(--exopzm5);
}
._56mx2d75 {
  gap: var(--exopzm6);
}
._56mx2d79 {
  gap: var(--exopzm7);
}
._56mx2d7d {
  gap: var(--exopzm8);
}
._56mx2d7h {
  gap: 0;
}
._56mx2d7l {
  padding-top: var(--exopzm0);
}
._56mx2d7p {
  padding-top: var(--exopzm1);
}
._56mx2d7t {
  padding-top: var(--exopzm2);
}
._56mx2d7x {
  padding-top: var(--exopzm3);
}
._56mx2d81 {
  padding-top: var(--exopzm4);
}
._56mx2d85 {
  padding-top: var(--exopzm5);
}
._56mx2d89 {
  padding-top: var(--exopzm6);
}
._56mx2d8d {
  padding-top: var(--exopzm7);
}
._56mx2d8h {
  padding-top: var(--exopzm8);
}
._56mx2d8l {
  padding-top: 0;
}
._56mx2d8p {
  padding-bottom: var(--exopzm0);
}
._56mx2d8t {
  padding-bottom: var(--exopzm1);
}
._56mx2d8x {
  padding-bottom: var(--exopzm2);
}
._56mx2d91 {
  padding-bottom: var(--exopzm3);
}
._56mx2d95 {
  padding-bottom: var(--exopzm4);
}
._56mx2d99 {
  padding-bottom: var(--exopzm5);
}
._56mx2d9d {
  padding-bottom: var(--exopzm6);
}
._56mx2d9h {
  padding-bottom: var(--exopzm7);
}
._56mx2d9l {
  padding-bottom: var(--exopzm8);
}
._56mx2d9p {
  padding-bottom: 0;
}
._56mx2d9t {
  padding-right: var(--exopzm0);
}
._56mx2d9x {
  padding-right: var(--exopzm1);
}
._56mx2da1 {
  padding-right: var(--exopzm2);
}
._56mx2da5 {
  padding-right: var(--exopzm3);
}
._56mx2da9 {
  padding-right: var(--exopzm4);
}
._56mx2dad {
  padding-right: var(--exopzm5);
}
._56mx2dah {
  padding-right: var(--exopzm6);
}
._56mx2dal {
  padding-right: var(--exopzm7);
}
._56mx2dap {
  padding-right: var(--exopzm8);
}
._56mx2dat {
  padding-right: 0;
}
._56mx2dax {
  padding-left: var(--exopzm0);
}
._56mx2db1 {
  padding-left: var(--exopzm1);
}
._56mx2db5 {
  padding-left: var(--exopzm2);
}
._56mx2db9 {
  padding-left: var(--exopzm3);
}
._56mx2dbd {
  padding-left: var(--exopzm4);
}
._56mx2dbh {
  padding-left: var(--exopzm5);
}
._56mx2dbl {
  padding-left: var(--exopzm6);
}
._56mx2dbp {
  padding-left: var(--exopzm7);
}
._56mx2dbt {
  padding-left: var(--exopzm8);
}
._56mx2dbx {
  padding-left: 0;
}
._56mx2dc1 {
  margin-top: var(--exopzm0);
}
._56mx2dc5 {
  margin-top: var(--exopzm1);
}
._56mx2dc9 {
  margin-top: var(--exopzm2);
}
._56mx2dcd {
  margin-top: var(--exopzm3);
}
._56mx2dch {
  margin-top: var(--exopzm4);
}
._56mx2dcl {
  margin-top: var(--exopzm5);
}
._56mx2dcp {
  margin-top: var(--exopzm6);
}
._56mx2dct {
  margin-top: var(--exopzm7);
}
._56mx2dcx {
  margin-top: var(--exopzm8);
}
._56mx2dd1 {
  margin-top: 0;
}
._56mx2dd5 {
  margin-bottom: var(--exopzm0);
}
._56mx2dd9 {
  margin-bottom: var(--exopzm1);
}
._56mx2ddd {
  margin-bottom: var(--exopzm2);
}
._56mx2ddh {
  margin-bottom: var(--exopzm3);
}
._56mx2ddl {
  margin-bottom: var(--exopzm4);
}
._56mx2ddp {
  margin-bottom: var(--exopzm5);
}
._56mx2ddt {
  margin-bottom: var(--exopzm6);
}
._56mx2ddx {
  margin-bottom: var(--exopzm7);
}
._56mx2de1 {
  margin-bottom: var(--exopzm8);
}
._56mx2de5 {
  margin-bottom: 0;
}
._56mx2de9 {
  margin-right: var(--exopzm0);
}
._56mx2ded {
  margin-right: var(--exopzm1);
}
._56mx2deh {
  margin-right: var(--exopzm2);
}
._56mx2del {
  margin-right: var(--exopzm3);
}
._56mx2dep {
  margin-right: var(--exopzm4);
}
._56mx2det {
  margin-right: var(--exopzm5);
}
._56mx2dex {
  margin-right: var(--exopzm6);
}
._56mx2df1 {
  margin-right: var(--exopzm7);
}
._56mx2df5 {
  margin-right: var(--exopzm8);
}
._56mx2df9 {
  margin-right: 0;
}
._56mx2dfd {
  margin-left: var(--exopzm0);
}
._56mx2dfh {
  margin-left: var(--exopzm1);
}
._56mx2dfl {
  margin-left: var(--exopzm2);
}
._56mx2dfp {
  margin-left: var(--exopzm3);
}
._56mx2dft {
  margin-left: var(--exopzm4);
}
._56mx2dfx {
  margin-left: var(--exopzm5);
}
._56mx2dg1 {
  margin-left: var(--exopzm6);
}
._56mx2dg5 {
  margin-left: var(--exopzm7);
}
._56mx2dg9 {
  margin-left: var(--exopzm8);
}
._56mx2dgd {
  margin-left: 0;
}
._56mx2dgh {
  align-items: flex-start;
}
._56mx2dgl {
  align-items: center;
}
._56mx2dgp {
  align-items: flex-end;
}
._56mx2dgt {
  justify-content: flex-start;
}
._56mx2dgx {
  justify-content: center;
}
._56mx2dh1 {
  justify-content: flex-end;
}
._56mx2dh5 {
  justify-content: space-between;
}
._56mx2dh9 {
  flex-direction: row;
}
._56mx2dhd {
  flex-direction: row-reverse;
}
._56mx2dhh {
  flex-direction: column;
}
._56mx2dhl {
  flex-direction: column-reverse;
}
._56mx2dhp {
  flex-wrap: wrap;
}
._56mx2dht {
  flex-wrap: nowrap;
}
._56mx2dhx {
  flex-shrink: 0;
}
._56mx2di1 {
  flex-grow: 0;
}
._56mx2di5 {
  flex-grow: 1;
}
._56mx2di9 {
  text-align: left;
}
._56mx2did {
  text-align: center;
}
._56mx2dih {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._56mx2d4u {
    display: none;
  }
  ._56mx2d4y {
    display: block;
  }
  ._56mx2d52 {
    display: inline;
  }
  ._56mx2d56 {
    display: inline-block;
  }
  ._56mx2d5a {
    display: flex;
  }
  ._56mx2d5e {
    position: relative;
  }
  ._56mx2d5i {
    position: absolute;
  }
  ._56mx2d5m {
    position: fixed;
  }
  ._56mx2d5q {
    position: sticky;
  }
  ._56mx2d5u {
    border-radius: 0;
  }
  ._56mx2d5y {
    border-radius: 9999px;
  }
  ._56mx2d62 {
    border-radius: var(--exopzmb);
  }
  ._56mx2d66 {
    border-radius: var(--exopzmc);
  }
  ._56mx2d6a {
    border-radius: var(--exopzmd);
  }
  ._56mx2d6e {
    border-radius: var(--exopzme);
  }
  ._56mx2d6i {
    gap: var(--exopzm0);
  }
  ._56mx2d6m {
    gap: var(--exopzm1);
  }
  ._56mx2d6q {
    gap: var(--exopzm2);
  }
  ._56mx2d6u {
    gap: var(--exopzm3);
  }
  ._56mx2d6y {
    gap: var(--exopzm4);
  }
  ._56mx2d72 {
    gap: var(--exopzm5);
  }
  ._56mx2d76 {
    gap: var(--exopzm6);
  }
  ._56mx2d7a {
    gap: var(--exopzm7);
  }
  ._56mx2d7e {
    gap: var(--exopzm8);
  }
  ._56mx2d7i {
    gap: 0;
  }
  ._56mx2d7m {
    padding-top: var(--exopzm0);
  }
  ._56mx2d7q {
    padding-top: var(--exopzm1);
  }
  ._56mx2d7u {
    padding-top: var(--exopzm2);
  }
  ._56mx2d7y {
    padding-top: var(--exopzm3);
  }
  ._56mx2d82 {
    padding-top: var(--exopzm4);
  }
  ._56mx2d86 {
    padding-top: var(--exopzm5);
  }
  ._56mx2d8a {
    padding-top: var(--exopzm6);
  }
  ._56mx2d8e {
    padding-top: var(--exopzm7);
  }
  ._56mx2d8i {
    padding-top: var(--exopzm8);
  }
  ._56mx2d8m {
    padding-top: 0;
  }
  ._56mx2d8q {
    padding-bottom: var(--exopzm0);
  }
  ._56mx2d8u {
    padding-bottom: var(--exopzm1);
  }
  ._56mx2d8y {
    padding-bottom: var(--exopzm2);
  }
  ._56mx2d92 {
    padding-bottom: var(--exopzm3);
  }
  ._56mx2d96 {
    padding-bottom: var(--exopzm4);
  }
  ._56mx2d9a {
    padding-bottom: var(--exopzm5);
  }
  ._56mx2d9e {
    padding-bottom: var(--exopzm6);
  }
  ._56mx2d9i {
    padding-bottom: var(--exopzm7);
  }
  ._56mx2d9m {
    padding-bottom: var(--exopzm8);
  }
  ._56mx2d9q {
    padding-bottom: 0;
  }
  ._56mx2d9u {
    padding-right: var(--exopzm0);
  }
  ._56mx2d9y {
    padding-right: var(--exopzm1);
  }
  ._56mx2da2 {
    padding-right: var(--exopzm2);
  }
  ._56mx2da6 {
    padding-right: var(--exopzm3);
  }
  ._56mx2daa {
    padding-right: var(--exopzm4);
  }
  ._56mx2dae {
    padding-right: var(--exopzm5);
  }
  ._56mx2dai {
    padding-right: var(--exopzm6);
  }
  ._56mx2dam {
    padding-right: var(--exopzm7);
  }
  ._56mx2daq {
    padding-right: var(--exopzm8);
  }
  ._56mx2dau {
    padding-right: 0;
  }
  ._56mx2day {
    padding-left: var(--exopzm0);
  }
  ._56mx2db2 {
    padding-left: var(--exopzm1);
  }
  ._56mx2db6 {
    padding-left: var(--exopzm2);
  }
  ._56mx2dba {
    padding-left: var(--exopzm3);
  }
  ._56mx2dbe {
    padding-left: var(--exopzm4);
  }
  ._56mx2dbi {
    padding-left: var(--exopzm5);
  }
  ._56mx2dbm {
    padding-left: var(--exopzm6);
  }
  ._56mx2dbq {
    padding-left: var(--exopzm7);
  }
  ._56mx2dbu {
    padding-left: var(--exopzm8);
  }
  ._56mx2dby {
    padding-left: 0;
  }
  ._56mx2dc2 {
    margin-top: var(--exopzm0);
  }
  ._56mx2dc6 {
    margin-top: var(--exopzm1);
  }
  ._56mx2dca {
    margin-top: var(--exopzm2);
  }
  ._56mx2dce {
    margin-top: var(--exopzm3);
  }
  ._56mx2dci {
    margin-top: var(--exopzm4);
  }
  ._56mx2dcm {
    margin-top: var(--exopzm5);
  }
  ._56mx2dcq {
    margin-top: var(--exopzm6);
  }
  ._56mx2dcu {
    margin-top: var(--exopzm7);
  }
  ._56mx2dcy {
    margin-top: var(--exopzm8);
  }
  ._56mx2dd2 {
    margin-top: 0;
  }
  ._56mx2dd6 {
    margin-bottom: var(--exopzm0);
  }
  ._56mx2dda {
    margin-bottom: var(--exopzm1);
  }
  ._56mx2dde {
    margin-bottom: var(--exopzm2);
  }
  ._56mx2ddi {
    margin-bottom: var(--exopzm3);
  }
  ._56mx2ddm {
    margin-bottom: var(--exopzm4);
  }
  ._56mx2ddq {
    margin-bottom: var(--exopzm5);
  }
  ._56mx2ddu {
    margin-bottom: var(--exopzm6);
  }
  ._56mx2ddy {
    margin-bottom: var(--exopzm7);
  }
  ._56mx2de2 {
    margin-bottom: var(--exopzm8);
  }
  ._56mx2de6 {
    margin-bottom: 0;
  }
  ._56mx2dea {
    margin-right: var(--exopzm0);
  }
  ._56mx2dee {
    margin-right: var(--exopzm1);
  }
  ._56mx2dei {
    margin-right: var(--exopzm2);
  }
  ._56mx2dem {
    margin-right: var(--exopzm3);
  }
  ._56mx2deq {
    margin-right: var(--exopzm4);
  }
  ._56mx2deu {
    margin-right: var(--exopzm5);
  }
  ._56mx2dey {
    margin-right: var(--exopzm6);
  }
  ._56mx2df2 {
    margin-right: var(--exopzm7);
  }
  ._56mx2df6 {
    margin-right: var(--exopzm8);
  }
  ._56mx2dfa {
    margin-right: 0;
  }
  ._56mx2dfe {
    margin-left: var(--exopzm0);
  }
  ._56mx2dfi {
    margin-left: var(--exopzm1);
  }
  ._56mx2dfm {
    margin-left: var(--exopzm2);
  }
  ._56mx2dfq {
    margin-left: var(--exopzm3);
  }
  ._56mx2dfu {
    margin-left: var(--exopzm4);
  }
  ._56mx2dfy {
    margin-left: var(--exopzm5);
  }
  ._56mx2dg2 {
    margin-left: var(--exopzm6);
  }
  ._56mx2dg6 {
    margin-left: var(--exopzm7);
  }
  ._56mx2dga {
    margin-left: var(--exopzm8);
  }
  ._56mx2dge {
    margin-left: 0;
  }
  ._56mx2dgi {
    align-items: flex-start;
  }
  ._56mx2dgm {
    align-items: center;
  }
  ._56mx2dgq {
    align-items: flex-end;
  }
  ._56mx2dgu {
    justify-content: flex-start;
  }
  ._56mx2dgy {
    justify-content: center;
  }
  ._56mx2dh2 {
    justify-content: flex-end;
  }
  ._56mx2dh6 {
    justify-content: space-between;
  }
  ._56mx2dha {
    flex-direction: row;
  }
  ._56mx2dhe {
    flex-direction: row-reverse;
  }
  ._56mx2dhi {
    flex-direction: column;
  }
  ._56mx2dhm {
    flex-direction: column-reverse;
  }
  ._56mx2dhq {
    flex-wrap: wrap;
  }
  ._56mx2dhu {
    flex-wrap: nowrap;
  }
  ._56mx2dhy {
    flex-shrink: 0;
  }
  ._56mx2di2 {
    flex-grow: 0;
  }
  ._56mx2di6 {
    flex-grow: 1;
  }
  ._56mx2dia {
    text-align: left;
  }
  ._56mx2die {
    text-align: center;
  }
  ._56mx2dii {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._56mx2d4v {
    display: none;
  }
  ._56mx2d4z {
    display: block;
  }
  ._56mx2d53 {
    display: inline;
  }
  ._56mx2d57 {
    display: inline-block;
  }
  ._56mx2d5b {
    display: flex;
  }
  ._56mx2d5f {
    position: relative;
  }
  ._56mx2d5j {
    position: absolute;
  }
  ._56mx2d5n {
    position: fixed;
  }
  ._56mx2d5r {
    position: sticky;
  }
  ._56mx2d5v {
    border-radius: 0;
  }
  ._56mx2d5z {
    border-radius: 9999px;
  }
  ._56mx2d63 {
    border-radius: var(--exopzmb);
  }
  ._56mx2d67 {
    border-radius: var(--exopzmc);
  }
  ._56mx2d6b {
    border-radius: var(--exopzmd);
  }
  ._56mx2d6f {
    border-radius: var(--exopzme);
  }
  ._56mx2d6j {
    gap: var(--exopzm0);
  }
  ._56mx2d6n {
    gap: var(--exopzm1);
  }
  ._56mx2d6r {
    gap: var(--exopzm2);
  }
  ._56mx2d6v {
    gap: var(--exopzm3);
  }
  ._56mx2d6z {
    gap: var(--exopzm4);
  }
  ._56mx2d73 {
    gap: var(--exopzm5);
  }
  ._56mx2d77 {
    gap: var(--exopzm6);
  }
  ._56mx2d7b {
    gap: var(--exopzm7);
  }
  ._56mx2d7f {
    gap: var(--exopzm8);
  }
  ._56mx2d7j {
    gap: 0;
  }
  ._56mx2d7n {
    padding-top: var(--exopzm0);
  }
  ._56mx2d7r {
    padding-top: var(--exopzm1);
  }
  ._56mx2d7v {
    padding-top: var(--exopzm2);
  }
  ._56mx2d7z {
    padding-top: var(--exopzm3);
  }
  ._56mx2d83 {
    padding-top: var(--exopzm4);
  }
  ._56mx2d87 {
    padding-top: var(--exopzm5);
  }
  ._56mx2d8b {
    padding-top: var(--exopzm6);
  }
  ._56mx2d8f {
    padding-top: var(--exopzm7);
  }
  ._56mx2d8j {
    padding-top: var(--exopzm8);
  }
  ._56mx2d8n {
    padding-top: 0;
  }
  ._56mx2d8r {
    padding-bottom: var(--exopzm0);
  }
  ._56mx2d8v {
    padding-bottom: var(--exopzm1);
  }
  ._56mx2d8z {
    padding-bottom: var(--exopzm2);
  }
  ._56mx2d93 {
    padding-bottom: var(--exopzm3);
  }
  ._56mx2d97 {
    padding-bottom: var(--exopzm4);
  }
  ._56mx2d9b {
    padding-bottom: var(--exopzm5);
  }
  ._56mx2d9f {
    padding-bottom: var(--exopzm6);
  }
  ._56mx2d9j {
    padding-bottom: var(--exopzm7);
  }
  ._56mx2d9n {
    padding-bottom: var(--exopzm8);
  }
  ._56mx2d9r {
    padding-bottom: 0;
  }
  ._56mx2d9v {
    padding-right: var(--exopzm0);
  }
  ._56mx2d9z {
    padding-right: var(--exopzm1);
  }
  ._56mx2da3 {
    padding-right: var(--exopzm2);
  }
  ._56mx2da7 {
    padding-right: var(--exopzm3);
  }
  ._56mx2dab {
    padding-right: var(--exopzm4);
  }
  ._56mx2daf {
    padding-right: var(--exopzm5);
  }
  ._56mx2daj {
    padding-right: var(--exopzm6);
  }
  ._56mx2dan {
    padding-right: var(--exopzm7);
  }
  ._56mx2dar {
    padding-right: var(--exopzm8);
  }
  ._56mx2dav {
    padding-right: 0;
  }
  ._56mx2daz {
    padding-left: var(--exopzm0);
  }
  ._56mx2db3 {
    padding-left: var(--exopzm1);
  }
  ._56mx2db7 {
    padding-left: var(--exopzm2);
  }
  ._56mx2dbb {
    padding-left: var(--exopzm3);
  }
  ._56mx2dbf {
    padding-left: var(--exopzm4);
  }
  ._56mx2dbj {
    padding-left: var(--exopzm5);
  }
  ._56mx2dbn {
    padding-left: var(--exopzm6);
  }
  ._56mx2dbr {
    padding-left: var(--exopzm7);
  }
  ._56mx2dbv {
    padding-left: var(--exopzm8);
  }
  ._56mx2dbz {
    padding-left: 0;
  }
  ._56mx2dc3 {
    margin-top: var(--exopzm0);
  }
  ._56mx2dc7 {
    margin-top: var(--exopzm1);
  }
  ._56mx2dcb {
    margin-top: var(--exopzm2);
  }
  ._56mx2dcf {
    margin-top: var(--exopzm3);
  }
  ._56mx2dcj {
    margin-top: var(--exopzm4);
  }
  ._56mx2dcn {
    margin-top: var(--exopzm5);
  }
  ._56mx2dcr {
    margin-top: var(--exopzm6);
  }
  ._56mx2dcv {
    margin-top: var(--exopzm7);
  }
  ._56mx2dcz {
    margin-top: var(--exopzm8);
  }
  ._56mx2dd3 {
    margin-top: 0;
  }
  ._56mx2dd7 {
    margin-bottom: var(--exopzm0);
  }
  ._56mx2ddb {
    margin-bottom: var(--exopzm1);
  }
  ._56mx2ddf {
    margin-bottom: var(--exopzm2);
  }
  ._56mx2ddj {
    margin-bottom: var(--exopzm3);
  }
  ._56mx2ddn {
    margin-bottom: var(--exopzm4);
  }
  ._56mx2ddr {
    margin-bottom: var(--exopzm5);
  }
  ._56mx2ddv {
    margin-bottom: var(--exopzm6);
  }
  ._56mx2ddz {
    margin-bottom: var(--exopzm7);
  }
  ._56mx2de3 {
    margin-bottom: var(--exopzm8);
  }
  ._56mx2de7 {
    margin-bottom: 0;
  }
  ._56mx2deb {
    margin-right: var(--exopzm0);
  }
  ._56mx2def {
    margin-right: var(--exopzm1);
  }
  ._56mx2dej {
    margin-right: var(--exopzm2);
  }
  ._56mx2den {
    margin-right: var(--exopzm3);
  }
  ._56mx2der {
    margin-right: var(--exopzm4);
  }
  ._56mx2dev {
    margin-right: var(--exopzm5);
  }
  ._56mx2dez {
    margin-right: var(--exopzm6);
  }
  ._56mx2df3 {
    margin-right: var(--exopzm7);
  }
  ._56mx2df7 {
    margin-right: var(--exopzm8);
  }
  ._56mx2dfb {
    margin-right: 0;
  }
  ._56mx2dff {
    margin-left: var(--exopzm0);
  }
  ._56mx2dfj {
    margin-left: var(--exopzm1);
  }
  ._56mx2dfn {
    margin-left: var(--exopzm2);
  }
  ._56mx2dfr {
    margin-left: var(--exopzm3);
  }
  ._56mx2dfv {
    margin-left: var(--exopzm4);
  }
  ._56mx2dfz {
    margin-left: var(--exopzm5);
  }
  ._56mx2dg3 {
    margin-left: var(--exopzm6);
  }
  ._56mx2dg7 {
    margin-left: var(--exopzm7);
  }
  ._56mx2dgb {
    margin-left: var(--exopzm8);
  }
  ._56mx2dgf {
    margin-left: 0;
  }
  ._56mx2dgj {
    align-items: flex-start;
  }
  ._56mx2dgn {
    align-items: center;
  }
  ._56mx2dgr {
    align-items: flex-end;
  }
  ._56mx2dgv {
    justify-content: flex-start;
  }
  ._56mx2dgz {
    justify-content: center;
  }
  ._56mx2dh3 {
    justify-content: flex-end;
  }
  ._56mx2dh7 {
    justify-content: space-between;
  }
  ._56mx2dhb {
    flex-direction: row;
  }
  ._56mx2dhf {
    flex-direction: row-reverse;
  }
  ._56mx2dhj {
    flex-direction: column;
  }
  ._56mx2dhn {
    flex-direction: column-reverse;
  }
  ._56mx2dhr {
    flex-wrap: wrap;
  }
  ._56mx2dhv {
    flex-wrap: nowrap;
  }
  ._56mx2dhz {
    flex-shrink: 0;
  }
  ._56mx2di3 {
    flex-grow: 0;
  }
  ._56mx2di7 {
    flex-grow: 1;
  }
  ._56mx2dib {
    text-align: left;
  }
  ._56mx2dif {
    text-align: center;
  }
  ._56mx2dij {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._56mx2d4w {
    display: none;
  }
  ._56mx2d50 {
    display: block;
  }
  ._56mx2d54 {
    display: inline;
  }
  ._56mx2d58 {
    display: inline-block;
  }
  ._56mx2d5c {
    display: flex;
  }
  ._56mx2d5g {
    position: relative;
  }
  ._56mx2d5k {
    position: absolute;
  }
  ._56mx2d5o {
    position: fixed;
  }
  ._56mx2d5s {
    position: sticky;
  }
  ._56mx2d5w {
    border-radius: 0;
  }
  ._56mx2d60 {
    border-radius: 9999px;
  }
  ._56mx2d64 {
    border-radius: var(--exopzmb);
  }
  ._56mx2d68 {
    border-radius: var(--exopzmc);
  }
  ._56mx2d6c {
    border-radius: var(--exopzmd);
  }
  ._56mx2d6g {
    border-radius: var(--exopzme);
  }
  ._56mx2d6k {
    gap: var(--exopzm0);
  }
  ._56mx2d6o {
    gap: var(--exopzm1);
  }
  ._56mx2d6s {
    gap: var(--exopzm2);
  }
  ._56mx2d6w {
    gap: var(--exopzm3);
  }
  ._56mx2d70 {
    gap: var(--exopzm4);
  }
  ._56mx2d74 {
    gap: var(--exopzm5);
  }
  ._56mx2d78 {
    gap: var(--exopzm6);
  }
  ._56mx2d7c {
    gap: var(--exopzm7);
  }
  ._56mx2d7g {
    gap: var(--exopzm8);
  }
  ._56mx2d7k {
    gap: 0;
  }
  ._56mx2d7o {
    padding-top: var(--exopzm0);
  }
  ._56mx2d7s {
    padding-top: var(--exopzm1);
  }
  ._56mx2d7w {
    padding-top: var(--exopzm2);
  }
  ._56mx2d80 {
    padding-top: var(--exopzm3);
  }
  ._56mx2d84 {
    padding-top: var(--exopzm4);
  }
  ._56mx2d88 {
    padding-top: var(--exopzm5);
  }
  ._56mx2d8c {
    padding-top: var(--exopzm6);
  }
  ._56mx2d8g {
    padding-top: var(--exopzm7);
  }
  ._56mx2d8k {
    padding-top: var(--exopzm8);
  }
  ._56mx2d8o {
    padding-top: 0;
  }
  ._56mx2d8s {
    padding-bottom: var(--exopzm0);
  }
  ._56mx2d8w {
    padding-bottom: var(--exopzm1);
  }
  ._56mx2d90 {
    padding-bottom: var(--exopzm2);
  }
  ._56mx2d94 {
    padding-bottom: var(--exopzm3);
  }
  ._56mx2d98 {
    padding-bottom: var(--exopzm4);
  }
  ._56mx2d9c {
    padding-bottom: var(--exopzm5);
  }
  ._56mx2d9g {
    padding-bottom: var(--exopzm6);
  }
  ._56mx2d9k {
    padding-bottom: var(--exopzm7);
  }
  ._56mx2d9o {
    padding-bottom: var(--exopzm8);
  }
  ._56mx2d9s {
    padding-bottom: 0;
  }
  ._56mx2d9w {
    padding-right: var(--exopzm0);
  }
  ._56mx2da0 {
    padding-right: var(--exopzm1);
  }
  ._56mx2da4 {
    padding-right: var(--exopzm2);
  }
  ._56mx2da8 {
    padding-right: var(--exopzm3);
  }
  ._56mx2dac {
    padding-right: var(--exopzm4);
  }
  ._56mx2dag {
    padding-right: var(--exopzm5);
  }
  ._56mx2dak {
    padding-right: var(--exopzm6);
  }
  ._56mx2dao {
    padding-right: var(--exopzm7);
  }
  ._56mx2das {
    padding-right: var(--exopzm8);
  }
  ._56mx2daw {
    padding-right: 0;
  }
  ._56mx2db0 {
    padding-left: var(--exopzm0);
  }
  ._56mx2db4 {
    padding-left: var(--exopzm1);
  }
  ._56mx2db8 {
    padding-left: var(--exopzm2);
  }
  ._56mx2dbc {
    padding-left: var(--exopzm3);
  }
  ._56mx2dbg {
    padding-left: var(--exopzm4);
  }
  ._56mx2dbk {
    padding-left: var(--exopzm5);
  }
  ._56mx2dbo {
    padding-left: var(--exopzm6);
  }
  ._56mx2dbs {
    padding-left: var(--exopzm7);
  }
  ._56mx2dbw {
    padding-left: var(--exopzm8);
  }
  ._56mx2dc0 {
    padding-left: 0;
  }
  ._56mx2dc4 {
    margin-top: var(--exopzm0);
  }
  ._56mx2dc8 {
    margin-top: var(--exopzm1);
  }
  ._56mx2dcc {
    margin-top: var(--exopzm2);
  }
  ._56mx2dcg {
    margin-top: var(--exopzm3);
  }
  ._56mx2dck {
    margin-top: var(--exopzm4);
  }
  ._56mx2dco {
    margin-top: var(--exopzm5);
  }
  ._56mx2dcs {
    margin-top: var(--exopzm6);
  }
  ._56mx2dcw {
    margin-top: var(--exopzm7);
  }
  ._56mx2dd0 {
    margin-top: var(--exopzm8);
  }
  ._56mx2dd4 {
    margin-top: 0;
  }
  ._56mx2dd8 {
    margin-bottom: var(--exopzm0);
  }
  ._56mx2ddc {
    margin-bottom: var(--exopzm1);
  }
  ._56mx2ddg {
    margin-bottom: var(--exopzm2);
  }
  ._56mx2ddk {
    margin-bottom: var(--exopzm3);
  }
  ._56mx2ddo {
    margin-bottom: var(--exopzm4);
  }
  ._56mx2dds {
    margin-bottom: var(--exopzm5);
  }
  ._56mx2ddw {
    margin-bottom: var(--exopzm6);
  }
  ._56mx2de0 {
    margin-bottom: var(--exopzm7);
  }
  ._56mx2de4 {
    margin-bottom: var(--exopzm8);
  }
  ._56mx2de8 {
    margin-bottom: 0;
  }
  ._56mx2dec {
    margin-right: var(--exopzm0);
  }
  ._56mx2deg {
    margin-right: var(--exopzm1);
  }
  ._56mx2dek {
    margin-right: var(--exopzm2);
  }
  ._56mx2deo {
    margin-right: var(--exopzm3);
  }
  ._56mx2des {
    margin-right: var(--exopzm4);
  }
  ._56mx2dew {
    margin-right: var(--exopzm5);
  }
  ._56mx2df0 {
    margin-right: var(--exopzm6);
  }
  ._56mx2df4 {
    margin-right: var(--exopzm7);
  }
  ._56mx2df8 {
    margin-right: var(--exopzm8);
  }
  ._56mx2dfc {
    margin-right: 0;
  }
  ._56mx2dfg {
    margin-left: var(--exopzm0);
  }
  ._56mx2dfk {
    margin-left: var(--exopzm1);
  }
  ._56mx2dfo {
    margin-left: var(--exopzm2);
  }
  ._56mx2dfs {
    margin-left: var(--exopzm3);
  }
  ._56mx2dfw {
    margin-left: var(--exopzm4);
  }
  ._56mx2dg0 {
    margin-left: var(--exopzm5);
  }
  ._56mx2dg4 {
    margin-left: var(--exopzm6);
  }
  ._56mx2dg8 {
    margin-left: var(--exopzm7);
  }
  ._56mx2dgc {
    margin-left: var(--exopzm8);
  }
  ._56mx2dgg {
    margin-left: 0;
  }
  ._56mx2dgk {
    align-items: flex-start;
  }
  ._56mx2dgo {
    align-items: center;
  }
  ._56mx2dgs {
    align-items: flex-end;
  }
  ._56mx2dgw {
    justify-content: flex-start;
  }
  ._56mx2dh0 {
    justify-content: center;
  }
  ._56mx2dh4 {
    justify-content: flex-end;
  }
  ._56mx2dh8 {
    justify-content: space-between;
  }
  ._56mx2dhc {
    flex-direction: row;
  }
  ._56mx2dhg {
    flex-direction: row-reverse;
  }
  ._56mx2dhk {
    flex-direction: column;
  }
  ._56mx2dho {
    flex-direction: column-reverse;
  }
  ._56mx2dhs {
    flex-wrap: wrap;
  }
  ._56mx2dhw {
    flex-wrap: nowrap;
  }
  ._56mx2di0 {
    flex-shrink: 0;
  }
  ._56mx2di4 {
    flex-grow: 0;
  }
  ._56mx2di8 {
    flex-grow: 1;
  }
  ._56mx2dic {
    text-align: left;
  }
  ._56mx2dig {
    text-align: center;
  }
  ._56mx2dik {
    text-align: right;
  }
}
.wmpgvt0 {
  --exopzm0: 24px;
  --exopzm1: 8px;
  --exopzm2: 12px;
  --exopzm3: 16px;
  --exopzm4: 24px;
  --exopzm5: 32px;
  --exopzm6: 48px;
  --exopzm7: 64px;
  --exopzm8: 96px;
  --exopzm9: 48px;
  --exopzma: 4px;
  --exopzmb: 4px;
  --exopzmc: 8px;
  --exopzmd: 16px;
  --exopzme: 24px;
  --exopzmf: #e60278;
  --exopzmg: #f8b1dc;
  --exopzmh: #fdc221;
  --exopzmi: #fee384;
  --exopzmj: #b91e1e;
  --exopzmk: #fb999a;
  --exopzml: #838fa5;
  --exopzmm: rgba(153, 191, 247, 0.7);
  --exopzmn: #1e47a9;
  --exopzmo: #99bff7;
  --exopzmp: #1d559d;
  --exopzmq: #98c9f1;
  --exopzmr: #2e3849;
  --exopzmt: #eaecf1;
  --exopzms: #fff;
  --exopzmu: #12784f;
  --exopzmv: #8bdec5;
  --exopzmw: #7f35a9;
  --exopzmx: #e1b2f5;
  --exopzmy: 2px;
  --exopzmz: 4px;
  --exopzm10: 6px;
  --exopzm11: 400px;
  --exopzm12: 660px;
  --exopzm13: 940px;
  --exopzm14: 1280px;
  --exopzm15: #e60278;
  --exopzm16: #f8b1dc;
  --exopzm17: #723d02;
  --exopzm18: #fee384;
  --exopzm19: #b91e1e;
  --exopzm1a: #fb999a;
  --exopzm1b: #1e47a9;
  --exopzm1c: #99bff7;
  --exopzm1d: #1d559d;
  --exopzm1e: #98c9f1;
  --exopzm1f: #2e3849;
  --exopzm1h: #fff;
  --exopzm1g: #2e3849;
  --exopzm1i: #5b2084;
  --exopzm1j: #f0d6fa;
  --exopzm1k: #2e3849;
  --exopzm1l: #fff;
  --exopzm1m: #12784f;
  --exopzm1n: #8bdec5;
  --exopzm1o: #7f35a9;
  --exopzm1p: #e1b2f5;
  --exopzm1q: #5a6881;
  --exopzm1r: hsla(0, 0%, 100%, 0.65);
  --exopzm1s: #fff;
  --exopzm1t: #1c2330;
  --exopzm1u: #051a49;
  --exopzm1v: #e60278;
  --exopzm1w: #cd026b;
  --exopzm1x: #fd0585;
  --exopzm1y: #feeffa;
  --exopzm1z: #fdd7f3;
  --exopzm20: #fde3f6;
  --exopzm21: #fdc221;
  --exopzm22: #fef8de;
  --exopzm23: #b91e1e;
  --exopzm24: #a31a1a;
  --exopzm25: #db1616;
  --exopzm26: #ffe3e2;
  --exopzm27: #fef3f3;
  --exopzm28: #fcdbdb;
  --exopzm29: #fde7e7;
  --exopzm2a: #1e47a9;
  --exopzm2b: #1a3e93;
  --exopzm2c: #2455c9;
  --exopzm2d: #f0f7fe;
  --exopzm2e: #d8eafc;
  --exopzm2f: #e4f1fd;
  --exopzm2g: #1d559d;
  --exopzm2h: #e3f2fb;
  --exopzm2i: #2e3849;
  --exopzm2j: #242c39;
  --exopzm2k: #384459;
  --exopzm2l: #f3f5f7;
  --exopzm2m: #f3f5f7;
  --exopzm2n: #e4e8ed;
  --exopzm2o: #ebeff2;
  --exopzm2p: #12784f;
  --exopzm2q: #e2f7f1;
  --exopzm2r: #7f35a9;
  --exopzm2s: #f9ebfd;
  --exopzm2t: #fff;
  --exopzm2u: #1c2330;
  --exopzm2v: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --exopzm2w: 783;
  --exopzm2x: 1057;
  --exopzm2y: -274;
  --exopzm2z: 0;
  --exopzm30: 1000;
  --exopzm3v: 18px;
  --exopzm3w: 27.094px;
  --exopzm3x: 14.094px;
  --exopzm3y: -0.3611em;
  --exopzm3z: -0.3611em;
  --exopzm40: 18px;
  --exopzm41: 27.094px;
  --exopzm42: 14.094px;
  --exopzm43: -0.3611em;
  --exopzm44: -0.3611em;
  --exopzm3l: 16px;
  --exopzm3m: 24.528px;
  --exopzm3n: 12.528px;
  --exopzm3o: -0.375em;
  --exopzm3p: -0.375em;
  --exopzm3q: 16px;
  --exopzm3r: 24.528px;
  --exopzm3s: 12.528px;
  --exopzm3t: -0.375em;
  --exopzm3u: -0.375em;
  --exopzm3b: 14px;
  --exopzm3c: 20.962px;
  --exopzm3d: 10.962px;
  --exopzm3e: -0.3571em;
  --exopzm3f: -0.3571em;
  --exopzm3g: 14px;
  --exopzm3h: 20.962px;
  --exopzm3i: 10.962px;
  --exopzm3j: -0.3571em;
  --exopzm3k: -0.3571em;
  --exopzm31: 12px;
  --exopzm32: 18.396px;
  --exopzm33: 9.396px;
  --exopzm34: -0.375em;
  --exopzm35: -0.375em;
  --exopzm36: 12px;
  --exopzm37: 18.396px;
  --exopzm38: 9.396px;
  --exopzm39: -0.375em;
  --exopzm3a: -0.375em;
  --exopzm45: 400;
  --exopzm46: 600;
  --exopzm47: 700;
  --exopzm48: 28px;
  --exopzm49: 32.924px;
  --exopzm4a: 21.924px;
  --exopzm4b: -0.1964em;
  --exopzm4c: -0.1964em;
  --exopzm4d: 36px;
  --exopzm4e: 42.188px;
  --exopzm4f: 28.188px;
  --exopzm4g: -0.1944em;
  --exopzm4h: -0.1944em;
  --exopzm4i: 24px;
  --exopzm4j: 29.792px;
  --exopzm4k: 18.792px;
  --exopzm4l: -0.2292em;
  --exopzm4m: -0.2292em;
  --exopzm4n: 30px;
  --exopzm4o: 36.49px;
  --exopzm4p: 23.49px;
  --exopzm4q: -0.2167em;
  --exopzm4r: -0.2167em;
  --exopzm4s: 22px;
  --exopzm4t: 27.226px;
  --exopzm4u: 17.226px;
  --exopzm4v: -0.2273em;
  --exopzm4w: -0.2273em;
  --exopzm4x: 24px;
  --exopzm4y: 29.792px;
  --exopzm4z: 18.792px;
  --exopzm50: -0.2292em;
  --exopzm51: -0.2292em;
  --exopzm52: 20px;
  --exopzm53: 24.66px;
  --exopzm54: 15.66px;
  --exopzm55: -0.225em;
  --exopzm56: -0.225em;
  --exopzm57: 20px;
  --exopzm58: 24.66px;
  --exopzm59: 15.66px;
  --exopzm5a: -0.225em;
  --exopzm5b: -0.225em;
  --exopzm5c: 400;
  --exopzm5d: 600;
  --exopzm5e: underline;
  --exopzm5f: 24px;
  --exopzm5g: 20px;
  --exopzm5h: transform 0.125s ease, opacity 0.125s ease;
  --exopzm5i: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --exopzm5j: scale(0.95);
  --exopzm5k:
    0 0 4px 0 rgba(28, 35, 48, 0.08), 0 4px 8px -2px rgba(28, 35, 48, 0.08);
  --exopzm5l:
    0 0 8px 0 rgba(28, 35, 48, 0.08), 0 8px 16px -4px rgba(28, 35, 48, 0.08);
  --exopzm5m:
    0 0 12px 0 rgba(28, 35, 48, 0.08), 0 12px 24px -6px rgba(28, 35, 48, 0.08);
}
._53pak74 {
  font-size: var(--_53pak70);
  line-height: var(--_53pak71);
}
._53pak74:before {
  content: "";
  display: table;
  margin-bottom: var(--_53pak72);
}
._53pak74:after {
  content: "";
  display: table;
  margin-top: var(--_53pak73);
}
._1wjhub50 {
  font-family: var(--exopzm2v);
}
._1wjhub51 {
  font-weight: var(--exopzm45);
}
._1wjhub52 {
  font-weight: var(--exopzm46);
}
._1wjhub53 {
  font-weight: var(--exopzm47);
}
._1wjhub54 {
  --_53pak70: var(--exopzm31);
  --_53pak71: var(--exopzm32);
  --_53pak72: var(--exopzm34);
  --_53pak73: var(--exopzm35);
}
._1wjhub56 {
  --_53pak70: var(--exopzm3b);
  --_53pak71: var(--exopzm3c);
  --_53pak72: var(--exopzm3e);
  --_53pak73: var(--exopzm3f);
}
._1wjhub58 {
  --_53pak70: var(--exopzm3l);
  --_53pak71: var(--exopzm3m);
  --_53pak72: var(--exopzm3o);
  --_53pak73: var(--exopzm3p);
}
._1wjhub5a {
  --_53pak70: var(--exopzm3v);
  --_53pak71: var(--exopzm3w);
  --_53pak72: var(--exopzm3y);
  --_53pak73: var(--exopzm3z);
}
._1wjhub5c {
  font-size: var(--exopzm31);
  line-height: var(--exopzm32);
}
._1wjhub5d {
  font-size: var(--exopzm3b);
  line-height: var(--exopzm3c);
}
._1wjhub5e {
  font-size: var(--exopzm3l);
  line-height: var(--exopzm3m);
}
._1wjhub5f {
  font-size: var(--exopzm3v);
  line-height: var(--exopzm3w);
}
._1wjhub5g {
  font-weight: var(--exopzm5c);
}
._1wjhub5h {
  font-weight: var(--exopzm5d);
}
._1wjhub5i {
  --_53pak70: var(--exopzm48);
  --_53pak71: var(--exopzm49);
  --_53pak72: var(--exopzm4b);
  --_53pak73: var(--exopzm4c);
}
._1wjhub5k {
  --_53pak70: var(--exopzm4i);
  --_53pak71: var(--exopzm4j);
  --_53pak72: var(--exopzm4l);
  --_53pak73: var(--exopzm4m);
}
._1wjhub5m {
  --_53pak70: var(--exopzm4s);
  --_53pak71: var(--exopzm4t);
  --_53pak72: var(--exopzm4v);
  --_53pak73: var(--exopzm4w);
}
._1wjhub5o {
  --_53pak70: var(--exopzm52);
  --_53pak71: var(--exopzm53);
  --_53pak72: var(--exopzm55);
  --_53pak73: var(--exopzm56);
}
html:not(._56mx2d10) ._1wjhub510 {
  --_1wjhub5q: var(--exopzm19);
  --_1wjhub5r: var(--exopzm17);
  --_1wjhub5s: var(--exopzm1d);
  --_1wjhub5t: var(--exopzm1o);
  --_1wjhub5u: var(--exopzm1m);
  --_1wjhub5v: var(--exopzm15);
  --_1wjhub5w: var(--exopzm1b);
  --_1wjhub5x: var(--exopzm1k);
  --_1wjhub5y: var(--exopzm1q);
  --_1wjhub5z: var(--exopzm1f);
}
html:not(._56mx2d10) ._1wjhub511 {
  --_1wjhub5q: var(--exopzm1a);
  --_1wjhub5r: var(--exopzm18);
  --_1wjhub5s: var(--exopzm1e);
  --_1wjhub5t: var(--exopzm1p);
  --_1wjhub5u: var(--exopzm1n);
  --_1wjhub5v: var(--exopzm16);
  --_1wjhub5w: var(--exopzm1c);
  --_1wjhub5x: var(--exopzm1l);
  --_1wjhub5y: var(--exopzm1r);
  --_1wjhub5z: var(--exopzm1h);
}
html._56mx2d10 ._1wjhub512 {
  --_1wjhub5q: var(--exopzm19);
  --_1wjhub5r: var(--exopzm17);
  --_1wjhub5s: var(--exopzm1d);
  --_1wjhub5t: var(--exopzm1o);
  --_1wjhub5u: var(--exopzm1m);
  --_1wjhub5v: var(--exopzm15);
  --_1wjhub5w: var(--exopzm1b);
  --_1wjhub5x: var(--exopzm1k);
  --_1wjhub5y: var(--exopzm1q);
  --_1wjhub5z: var(--exopzm1f);
}
html._56mx2d10 ._1wjhub513 {
  --_1wjhub5q: var(--exopzm1a);
  --_1wjhub5r: var(--exopzm18);
  --_1wjhub5s: var(--exopzm1e);
  --_1wjhub5t: var(--exopzm1p);
  --_1wjhub5u: var(--exopzm1n);
  --_1wjhub5v: var(--exopzm16);
  --_1wjhub5w: var(--exopzm1c);
  --_1wjhub5x: var(--exopzm1l);
  --_1wjhub5y: var(--exopzm1r);
  --_1wjhub5z: var(--exopzm1h);
}
html:not(._56mx2d10) ._1wjhub514,
html:not(._56mx2d10) ._1wjhub515,
html:not(._56mx2d10) ._1wjhub516,
html:not(._56mx2d10) ._1wjhub517 {
  --_1wjhub5x: var(--_1wjhub5q);
}
html:not(._56mx2d10) ._1wjhub518,
html:not(._56mx2d10) ._1wjhub519 {
  --_1wjhub5x: var(--_1wjhub5r);
}
html:not(._56mx2d10) ._1wjhub51a {
  --_1wjhub5x: var(--_1wjhub5u);
}
html:not(._56mx2d10) ._1wjhub51b {
  --_1wjhub5x: var(--_1wjhub5s);
}
html:not(._56mx2d10) ._1wjhub51c {
  --_1wjhub5x: var(--_1wjhub5t);
}
html._56mx2d10 ._1wjhub51d,
html._56mx2d10 ._1wjhub51e,
html._56mx2d10 ._1wjhub51f,
html._56mx2d10 ._1wjhub51g {
  --_1wjhub5x: var(--_1wjhub5q);
}
html._56mx2d10 ._1wjhub51h,
html._56mx2d10 ._1wjhub51i {
  --_1wjhub5x: var(--_1wjhub5r);
}
html._56mx2d10 ._1wjhub51j {
  --_1wjhub5x: var(--_1wjhub5u);
}
html._56mx2d10 ._1wjhub51k {
  --_1wjhub5x: var(--_1wjhub5s);
}
html._56mx2d10 ._1wjhub51l {
  --_1wjhub5x: var(--_1wjhub5t);
}
._1wjhub51m {
  color: var(--_1wjhub5q);
}
._1wjhub51n {
  color: var(--_1wjhub5r);
}
._1wjhub51o {
  color: var(--_1wjhub5s);
}
._1wjhub51p {
  color: var(--_1wjhub5t);
}
._1wjhub51q {
  color: var(--_1wjhub5u);
}
._1wjhub51r {
  color: var(--_1wjhub5v);
}
._1wjhub51s {
  color: var(--_1wjhub5w);
}
._1wjhub51t {
  color: var(--_1wjhub5x);
}
._1wjhub51u {
  color: var(--_1wjhub5y);
}
._1wjhub51v {
  color: var(--_1wjhub5z);
}
._1wjhub51w {
  padding-bottom: calc((var(--exopzm9) - var(--exopzm32)) / 2);
  padding-top: calc((var(--exopzm9) - var(--exopzm32)) / 2);
}
._1wjhub51x {
  padding-bottom: calc((var(--exopzm9) - var(--exopzm3c)) / 2);
  padding-top: calc((var(--exopzm9) - var(--exopzm3c)) / 2);
}
._1wjhub51y {
  padding-bottom: calc((var(--exopzm9) - var(--exopzm3m)) / 2);
  padding-top: calc((var(--exopzm9) - var(--exopzm3m)) / 2);
}
._1wjhub51z {
  padding-bottom: calc((var(--exopzm9) - var(--exopzm3w)) / 2);
  padding-top: calc((var(--exopzm9) - var(--exopzm3w)) / 2);
}
@media screen and (min-width: 740px) {
  ._1wjhub54 {
    --_53pak70: var(--exopzm36);
    --_53pak71: var(--exopzm37);
    --_53pak72: var(--exopzm39);
    --_53pak73: var(--exopzm3a);
  }
  ._1wjhub56 {
    --_53pak70: var(--exopzm3g);
    --_53pak71: var(--exopzm3h);
    --_53pak72: var(--exopzm3j);
    --_53pak73: var(--exopzm3k);
  }
  ._1wjhub58 {
    --_53pak70: var(--exopzm3q);
    --_53pak71: var(--exopzm3r);
    --_53pak72: var(--exopzm3t);
    --_53pak73: var(--exopzm3u);
  }
  ._1wjhub5a {
    --_53pak70: var(--exopzm40);
    --_53pak71: var(--exopzm41);
    --_53pak72: var(--exopzm43);
    --_53pak73: var(--exopzm44);
  }
  ._1wjhub5c {
    font-size: var(--exopzm36);
    line-height: var(--exopzm37);
  }
  ._1wjhub5d {
    font-size: var(--exopzm3g);
    line-height: var(--exopzm3h);
  }
  ._1wjhub5e {
    font-size: var(--exopzm3q);
    line-height: var(--exopzm3r);
  }
  ._1wjhub5f {
    font-size: var(--exopzm40);
    line-height: var(--exopzm41);
  }
  ._1wjhub5i {
    --_53pak70: var(--exopzm4d);
    --_53pak71: var(--exopzm4e);
    --_53pak72: var(--exopzm4g);
    --_53pak73: var(--exopzm4h);
  }
  ._1wjhub5k {
    --_53pak70: var(--exopzm4n);
    --_53pak71: var(--exopzm4o);
    --_53pak72: var(--exopzm4q);
    --_53pak73: var(--exopzm4r);
  }
  ._1wjhub5m {
    --_53pak70: var(--exopzm4x);
    --_53pak71: var(--exopzm4y);
    --_53pak72: var(--exopzm50);
    --_53pak73: var(--exopzm51);
  }
  ._1wjhub5o {
    --_53pak70: var(--exopzm57);
    --_53pak71: var(--exopzm58);
    --_53pak72: var(--exopzm5a);
    --_53pak73: var(--exopzm5b);
  }
  ._1wjhub51w {
    padding-bottom: calc((var(--exopzm9) - var(--exopzm37)) / 2);
    padding-top: calc((var(--exopzm9) - var(--exopzm37)) / 2);
  }
  ._1wjhub51x {
    padding-bottom: calc((var(--exopzm9) - var(--exopzm3h)) / 2);
    padding-top: calc((var(--exopzm9) - var(--exopzm3h)) / 2);
  }
  ._1wjhub51y {
    padding-bottom: calc((var(--exopzm9) - var(--exopzm3r)) / 2);
    padding-top: calc((var(--exopzm9) - var(--exopzm3r)) / 2);
  }
  ._1wjhub51z {
    padding-bottom: calc((var(--exopzm9) - var(--exopzm41)) / 2);
    padding-top: calc((var(--exopzm9) - var(--exopzm41)) / 2);
  }
}
._1p36nfc0 {
  margin-bottom: -0.1em;
}
._1p36nfc2 {
  overflow-wrap: break-word;
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1p36nfc0 ._1p36nfc2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1p36nfc4 {
    display: -webkit-box;
    -webkit-line-clamp: var(--_1p36nfc3);
    white-space: normal;
    -webkit-box-orient: vertical;
  }
}
.bdkcuv6 {
  background: var(--bdkcuv0);
}
.bdkcuv7 {
  background: var(--bdkcuv1);
}
.bdkcuv8 {
  background: var(--bdkcuv2);
}
.bdkcuv9 {
  background: var(--bdkcuv3);
}
.bdkcuva {
  background: var(--bdkcuv4);
}
.bdkcuvb {
  background: var(--bdkcuv5);
}
html:not(._56mx2d10) .bdkcuvc {
  --bdkcuv0: var(--exopzmw);
  --bdkcuv1: var(--exopzmp);
  --bdkcuv2: var(--exopzmu);
  --bdkcuv3: var(--exopzmh);
  --bdkcuv4: var(--exopzmj);
  --bdkcuv5: var(--exopzmn);
}
html:not(._56mx2d10) .bdkcuvd {
  --bdkcuv0: var(--exopzmx);
  --bdkcuv1: var(--exopzmq);
  --bdkcuv2: var(--exopzmv);
  --bdkcuv3: var(--exopzmi);
  --bdkcuv4: var(--exopzmk);
  --bdkcuv5: var(--exopzmo);
}
html._56mx2d10 .bdkcuve {
  --bdkcuv0: var(--exopzmw);
  --bdkcuv1: var(--exopzmp);
  --bdkcuv2: var(--exopzmu);
  --bdkcuv3: var(--exopzmh);
  --bdkcuv4: var(--exopzmj);
  --bdkcuv5: var(--exopzmn);
}
html._56mx2d10 .bdkcuvf {
  --bdkcuv0: var(--exopzmx);
  --bdkcuv1: var(--exopzmq);
  --bdkcuv2: var(--exopzmv);
  --bdkcuv3: var(--exopzmi);
  --bdkcuv4: var(--exopzmk);
  --bdkcuv5: var(--exopzmo);
}
.bdkcuvg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.bdkcuvh {
  width: var(--exopzme);
}
.bdkcuvi {
  width: var(--exopzma);
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom-client.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-dom.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.js
 *
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin > start > should start a development server 1`] = `
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,24 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>
       Webpack App
     </title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
     >
     <script
       defer
       src="main.js"
     >
     </script>
     <link
       href="main.css"
       rel="stylesheet"
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__56mx2d10,html.sprinkles_darkMode__56mx2d10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__wmpgvt0 typography_lightModeTone_light__1wjhub510 typography_darkModeTone_dark__1wjhub513">
+        <div class="reset_base__1s963ek0 sprinkles_paddingBottom_gutter_mobile__56mx2d8p sprinkles_paddingTop_gutter_mobile__56mx2d7l sprinkles_paddingLeft_gutter_mobile__56mx2dax sprinkles_paddingRight_gutter_mobile__56mx2d9t sprinkles_position_relative_mobile__56mx2d5d sprinkles_borderRadius_large_mobile__56mx2d69 sprinkles_textAlign_left_mobile__56mx2di9 sprinkles_boxShadow_borderNeutralLight_lightMode__56mx2d4j sprinkles_boxShadow_borderNeutral_darkMode__56mx2d4c typography_lightModeTone_light__1wjhub510 typography_darkModeTone_dark__1wjhub513 sprinkles_background_surface_lightMode__56mx2d33 sprinkles_background_surfaceDark_darkMode__56mx2d36">
+          <span class="reset_base__1s963ek0 sprinkles_display_block_mobile__56mx2d4x typography_fontFamily__1wjhub50 typography_fontWeight_regular__1wjhub51 typography_tone_neutral__1wjhub51t typography_textSize_large__1wjhub5a capsize_capsizeStyle__53pak74">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
